<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_secondary"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_music"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:text="@string/turn_music_on"
        android:textColor="@color/font_color"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_changes"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:background="@drawable/btn_bg"
        android:text="@string/settings_save"
        android:textColor="@color/font_color"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/settings_main"
            android:textColor="@color/font_color"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_secondary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/settings_main_secondary"
            android:textColor="@color/font_color"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/font"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/settings_font"
            android:textColor="@color/font_color"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/default_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/settings_default"
            android:textColor="@color/font_color"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>